fade in grade chart on render and prevent scrollbar content shift

--- a/src/components/GradesChart/GradesChart.module.css
+++ b/src/components/GradesChart/GradesChart.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+  animation: fade-in 0.3s;
   width: 100%;
   height: 100%;
   margin-bottom: 32px;
@@ -20,4 +21,13 @@
 
 .totalLabel {
   font-weight: 600;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 100;
+  }
 }
